<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NameActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/thankYouButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_button"
            android:textSize="18sp"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/dontCallMeThatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_call_me_that_button"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
